examples/test/testpolicy6219.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6219
  namespace: namespace201
spec:
  podSelector:
    matchLabels:
      key3: value18
      key5: value28
      key37: value12
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key20: value36
          key8: value30
          key10: value45
      podSelector:
        matchLabels:
          key11: value44
